<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolBarUserAddressModify"
			style="@style/AppToolbar.Navigation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:menu="@menu/menu_user_address_modify"
			app:title="배송지 수정" />


		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayoutUserAddressModifyArrivalName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="40dp"
			app:endIconMode="clear_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/toolBarUserAddressModify">

			<com.google.android.material.textfield.TextInputEditText
				style="@style/AppText3.S14"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/common_arrival_name" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayoutUserAddressModifyUserName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="20dp"
			app:endIconMode="clear_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textInputLayoutUserAddressModifyArrivalName">

			<com.google.android.material.textfield.TextInputEditText
				style="@style/AppText3.S14"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/common_name" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayoutUserAddressModifyPhoneNumber"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="20dp"
			app:endIconMode="clear_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textInputLayoutUserAddressModifyUserName">


			<com.google.android.material.textfield.TextInputEditText
				style="@style/AppText3.S14"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/common_phone_number"
				android:inputType="number" />
		</com.google.android.material.textfield.TextInputLayout>

		<TextView
			android:id="@+id/textViewUserAddressModifyShowAddress"
			style="@style/AppText3.S14"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="30dp"
			android:background="@drawable/background_textview"
			android:padding="20dp"
			android:text="@string/common_address"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textInputLayoutUserAddressModifyPhoneNumber" />

		<TextView
			android:id="@+id/textViewUserAddressModifyShowPostNumber"
			style="@style/AppText3.S14"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="30dp"
			android:background="@drawable/background_textview"
			android:padding="20dp"
			android:text="@string/common_zip_code"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textViewUserAddressModifyShowAddress" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayoutUserModifyAddressAddDetailAddress"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="25dp"
			app:endIconMode="clear_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textViewUserAddressModifyShowPostNumber">

			<com.google.android.material.textfield.TextInputEditText
				style="@style/AppText3.S14"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/common_address_detail" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.checkbox.MaterialCheckBox
			android:id="@+id/checkboxUserAddressModifyDefaultAddress"
			style="@style/AppText3.S14"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="기본 배송지로 설정"
			app:buttonTint="@color/green100"
			app:chipBackgroundColor="@color/green100"
			app:layout_constraintStart_toStartOf="@id/textInputLayoutUserModifyAddressAddDetailAddress"
			app:layout_constraintTop_toBottomOf="@id/textInputLayoutUserModifyAddressAddDetailAddress" />


		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonUserAddressModifyArrivalAdd"
			style="@style/AppButtonPrimary"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="50dp"
			android:text="@string/common_save"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/checkboxUserAddressModifyDefaultAddress" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
